# vkrt

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_stb.c  build_vma.cpp  camera.cpp  camera.hpp  ecs.cpp  ecs.hpp  engine.cpp  engine.hpp  flags.hpp  free_list_allocator.hpp  gpu_staging_manager.cpp  gpu_staging_manager.hpp  handle.hpp  handle_vec.hpp  handle_vector.hpp  imgui.ini  linear_allocator.cpp  linear_allocator.hpp  main.cpp  model_importer.cpp  model_importer.hpp  model_loader.cpp  model_loader.hpp  renderer.hpp  renderer_vulkan.cpp  renderer_vulkan.hpp  renderer_vulkan_wrappers.cpp  renderer_vulkan_wrappers.hpp  scene.cpp  scene.hpp  set_debug_name.hpp  sorted_vec.hpp  ssao_kernels.txt  (+5 more)
app/: app.cpp  app.hpp
assets/models/cornell/: bunny.glb  cornell.glb  cornell2.glb  cornell3.glb
assets/models/sphere/: sphere.glb
assets/shaders/: NOTE  bindless_structures.glsli  bindless_structures.inc  bindless_structures.inc.glsl  common.hlsli  common.inc.glsl  global_common.inc.glsl  global_layout.inc.glsl  util.hlsli
assets/shaders/bilateral/: bilateral.frag.glsl
assets/shaders/common/: skybox.frag.glsl  skybox.frag.glsl.precompiled  skybox.vert.glsl  skybox.vert.glsl.precompiled  zoutput.frag.glsl.precompiled  zoutput.vert.glsl  zoutput.vert.glsl.precompiled
assets/shaders/culling/: common.glsli  common.inc.glsl  culling.comp.glsl  culling.comp.glsl.precompiled  hiz.comp.glsl  hiz.comp.glsl.precompiled
assets/shaders/debug/: common.glsli  geom.frag.glsl
assets/shaders/default_unlit/: common.hlsli  common.inc.glsl  default.frag.glsl  default.vert.glsl  default_unlit.ps.hlsl  push_constants.inc.glsl  unlit.frag.glsl  unlit.frag.glsl.precompiled  unlit.vert.glsl  unlit.vert.glsl.precompiled
assets/shaders/default_wireframe/: common.hlsli  default_wireframe.ps.hlsl  default_wireframe.vs.hlsl
assets/shaders/default_z_prepass/: common.hlsli  z_prepass.ps.hlsl  z_prepass.vs.hlsl
assets/shaders/depth/: depth_rect_buffer.frag.glsl  depth_rect_buffer.vert.glsl
assets/shaders/downsample/: depth_half.cs.hlsl
assets/shaders/fftocean/: amplitudes.comp.glsl  butterfly.comp  butterfly.comp.glsl  common.inc.glsl  debug_gen_dft.comp.glsl  debug_gen_h0.comp.glsl  debug_gen_ht.comp.glsl  debug_gen_hx.comp.glsl  debug_gen_normal.comp.glsl  debug_gen_normalize.comp.glsl  displacement.comp.glsl  fourier_amps.comp.glsl  gradient.comp.glsl  jacobian.comp.glsl  pingpong.comp.glsl
assets/shaders/forwardp/: common.glsli  cull_lights.comp.glsl  cull_lights.comp.glsl.precompiled  gen_frusts.comp.glsl  gen_frusts.comp.glsl.precompiled
assets/shaders/gtao/: common.hlsli  gtao.cs.hlsl  gtao.cs_v1.hlsl  gtao.cs_v2.hlsl
assets/shaders/imgui/: common.hlsli  common.inc.glsl  imgui.frag.glsl  imgui.frag.glsl.precompiled  imgui.ps.hlsl  imgui.vert.glsl  imgui.vert.glsl.precompiled  imgui.vs.hlsl
assets/shaders/meshpass/: common.hlsli  default_unlit.ps.hlsl  default_unlit.vs.hlsl
assets/shaders/normal_reconstruction/: common.hlsli  normal.cs.hlsl
assets/shaders/old_glsl/: common.glsli
assets/shaders/rtao/: common.hlsli  rtao.cs.hlsl
assets/shaders/rtbasic/: closest_hit.glsl  closest_hit.rchit  closest_hit.rchit.glsl  common.inc  common.inc.glsl  descriptor_layout.inc  light.inc  miss.glsl  miss.rmiss.glsl  miss2.glsl  probe_irradiance.comp  probe_offset.comp  probes.inc.glsl  push_constants.inc  push_constants.inc.glsl  ray_payload.inc  raygen.glsl  raygen.rgen  raygen.rgen.glsl  shadow.rchit  shadow.rchit.glsl  shadow.rmiss.glsl
assets/shaders/ssao/: apply.cs.hlsl  blur.cs.hlsl  common.hlsli  copy_noise.cs.hlsl  ssao.cs.hlsl  ssilvb.cs.hlsl
assets/shaders/test/: test.frag.glsl  test.vert.glsl
assets/shaders/triangle/: triangle.vert.glsl
assets/shaders/velocity/: velocity.cs.hlsl
assets/shaders/vsm/: bindless_structures.inc.glsl  clear_page.comp.glsl  common.inc.glsl  debug_page_alloc_copy.comp.glsl  debug_vsm_alloc_copy.comp.glsl  page_alloc.comp.glsl  shadow.frag.glsl  shadow.vert.glsl  vsm_common.inc.glsl  zprepass.vert.glsl
common/: components.hpp  flags.hpp  spatial.hpp  types.hpp
eng/: build_header_only.cpp  camera.cpp  camera.hpp  ecs.hpp  engine.cpp  engine.hpp  free_list_allocator.hpp  handle_vec.hpp  logger.hpp  main.cpp  model_importer.cpp  model_importer.hpp  scene.cpp  scene.hpp  to_string.cpp  ui.cpp  ui.hpp  utils.hpp
eng/assets/: asset_manager.cpp  asset_manager.hpp  compression.hpp  importer.cpp  importer.hpp  loaders.cpp  loaders.hpp  macros.hpp  serialization.cpp  serialization.hpp
eng/common/: callback.hpp  components.hpp  dll_hot_reload.hpp  doublesidedalloc.hpp  flags.hpp  handle.hpp  handle_map.hpp  handleflatset.hpp  handlemap.hpp  handleset.hpp  handlesparsevec.hpp  hash.hpp  indexed_hierarchy.hpp  logger.hpp  paths.hpp  scalar_types.hpp  slotallocator.hpp  slotmap.hpp  slotvec.hpp  sorted_vec.hpp  sparsemap.hpp  sparseset.hpp  sparsevec.hpp  spatial.hpp  to_string.hpp  to_vk.hpp  types.hpp
eng/ecs/: components.cpp  components.hpp  components_fwd.hpp  ecs.hpp  test_ecs.hpp  traits.hpp
eng/ecs/components/: components.hpp
eng/fs/: fs.cpp  fs.hpp
eng/math/: align.hpp
eng/physics/: bvh.cpp  bvh.hpp
eng/renderer/: backend.hpp  bindlesspool.cpp  bindlesspool.hpp  buffer.cpp  buffer.hpp  common.hpp  descpool.cpp  descpool.hpp  fwd.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  pipelines.cpp  pipelines.hpp  renderer.cpp  renderer.hpp  renderer_fwd.hpp  renderer_vulkan.cpp  renderer_vulkan.hpp  renderer_vulkan_wrappers.cpp  renderer_vulkan_wrappers.hpp  rendergraph.cpp  rendergraph.cpp~RF16ae3509.TMP  rendergraph.hpp  set_debug_name.hpp  staging_buffer.cpp  staging_buffer.hpp  submit_queue.cpp  submit_queue.hpp  to_vk.cpp  types.hpp  vk_cmd_queue.cpp  vk_cmd_queue.hpp  vk_submit_queue.cpp  vk_submit_queue.hpp  vulkan_structs.hpp
eng/renderer/imgui/: imgui_renderer.cpp  imgui_renderer.hpp
eng/renderer/mesh/: mesh_renderer.cpp  mesh_renderer.hpp
eng/renderer/passes/: common.hpp  passes.cpp  passes.hpp  passes_.cpp  (+4 more)
eng/string/: stack_string.hpp
eng/ui/: ui.cpp  ui.hpp
(+47 files in other folders)
